--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "city-explorer-api",
+  "name": "server-solution",
   "version": "1.0.0",
-  "description": "Code 301d106 City Explorer API",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "JB Tellez",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "axios": "^1.6.2",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "4.17.1"
   }
 }
